--- a/vignettes/manage_igraph_object.Rmd
+++ b/vignettes/manage_igraph_object.Rmd
@@ -14,10 +14,9 @@ knitr::opts_chunk$set(
 )
 ```
 
-# Managing igraph object
-`codexplor` offering functions to manage `igraph` object. turn an edgelist into an igraph object, and filter it across the way. 
+`codexplor` offering functions to manage `igraph` object : turn an edgelist into an igraph object, filter some nodes accordingly to their indegrees or outdegrees, etc. 
 
-Once you have a network such as a network of internal dependancies within a project (see `get_text_network_from_project`)
+Once you have a network as the network of internal dependancies within a project computed by `get_text_network_from_project` (see the [vignette of `get_text_network_from_project`](https://clement-lvd.github.io/codexplor/articles/vignette_get_text_network_from_project.html))
 
 - Turn your Citations Network into a directed `igraph`  network with ![.](https://img.shields.io/badge/{igraph}-bold?style=flat&logoColor=black&logoSize=2&label=get_igraph_from_df()&labelColor=green&color=black)
 
@@ -26,9 +25,12 @@ Once you have a network such as a network of internal dependancies within a proj
 - Once you have an igraph object, zoom on a precise function with 
 ![.](https://img.shields.io/badge/{igraph}-bold?style=flat&logoColor=black&logoSize=2&label=filter_igraph_egonetwork()&labelColor=green&color=black)
 
-      filter_igraph_egonetwork(netig, "a_node")
+      filter_net <- filter_igraph_egonetwork(netig, "an_interesting_function")
 
-- Turn it into an interactive `networkD3` dataviz with ![.](https://img.shields.io/badge/{igraph}-bold?style=flat&logoColor=black&logoSize=2&label=get_networkd3_from_igraph()&labelColor=green&color=black)
+- Turn it into an interactive `networkD3` dataviz with ![.](https://img.shields.io/badge/{networkD3}-bold?style=flat&logoColor=black&logoSize=2&label=get_networkd3_from_igraph()&labelColor=green&color=black)
 
-- And manage the interactive `networkD3` dataviz with ![.](https://img.shields.io/badge/{igraph}-bold?style=flat&logoColor=black&logoSize=2&label=get_networkd3_from_igraph()&labelColor=green&color=black)
+    get_networkd3_from_igraph(filter_net)
 
+- And tweak the legend of the interactive `networkD3` dataviz with ![.](https://img.shields.io/badge/{networkD3}-bold?style=flat&logoColor=black&logoSize=2&label=move_networkd3_legend()&labelColor=green&color=black)
+
+- ...
