--- a/README.Rmd
+++ b/README.Rmd
@@ -29,7 +29,7 @@ return("<style>
 
 `codexplor` offers **R** functions dedicated to explore, analyze and monitor a programming project.
 
-Given a programming project, `codexplor` compute standardized text mining metrics and dataviz' about the project : get rid of global complexity with a global network of local dependancies, and assess local complexity with document-level metrics.
+Given a programming project, `codexplor` compute standardized text mining metrics and dataviz' about the project : get rid of global complexity with a network of local dependancies, and assess local complexity with document-level metrics.
 
 <head>
   <style>
