--- a/README.Rmd
+++ b/README.Rmd
@@ -153,7 +153,7 @@ Other languages are planned^[Current list of planned supported languages is : `r
 
 *WIP* [🔧🔨]
 
-`codexplor` offers functions that are dedicated to analyze a programming project, accordingly to several tools that perform a part of the analysis. `codexplor` also offers helper functions, e.g., for create and filter a network with the `igraph` package.
+`codexplor` offers functions that are dedicated to analyze a programming project, accordingly to several analysis tools. `codexplor` also offers helper functions, e.g., for create and filter a network with the `igraph` package.
 
 ```{r table-functions, echo=FALSE}
 
