--- a/README.Rmd
+++ b/README.Rmd
@@ -59,7 +59,7 @@ netd3 <- get_networkd3_from_igraph(fn_net, linkDistance = 40, charge = -100, leg
      net <- get_text_network_from_project(repos = "clement-LVD/codexplor")
          # Turn a github repo into a network of internal dependancies
          
-     get_networkd3_from_igraph(net) # Produce an interactive dataviz'
+     get_networkd3_from_igraph(net$citations_network) # Produce an interactive dataviz'
 
 Return an interactive dataviz' of the internal dependancies within `codexplor` :
 
