--- a/README.Rmd
+++ b/README.Rmd
@@ -46,24 +46,32 @@ devtools::install_github("clement-LVD/codexplor")
 
 ### Example : dataviz' of internal dependancies
 
-```{r compute-picture-network-of-func, eval=FALSE, include=FALSE}
-require(htmlwidgets); require(webshot2)
+```{r compute-picture-network-of-func, echo=TRUE}
+require(codexplor)
 
-fn_net <-  get_networkd3_from_igraph(codexplor::get_text_network_from_project(repos = "clement-LVD/codexplor"))
+codes_codexplor <-  get_doc_network_from_project(repos = "clement-LVD/codexplor")
 
-netd3 <- get_networkd3_from_igraph(fn_net, linkDistance = 40, charge = -100, legend = F , title_h1 = NULL, subtitle_h2 = NULL, endnotes_h3 = NULL)
+str(ce_net, max.level = 1)  #
+
+netd3 <- get_networkd3_from_igraph(codes_codexplor$citations_network
+                                   , linkDistance = 40
+                                   , charge = -100
+                                   , legend = F 
+                                   , title_h1 = "codexplor functions network")
+
+netd3
 
 ```
 
 
-     net <- get_text_network_from_project(repos = "clement-LVD/codexplor")
+     net <- get_doc_network_from_project(repos = "clement-LVD/codexplor")
          # Turn a github repo into a network of internal dependancies
          
      get_networkd3_from_igraph(net$citations_network) # Produce an interactive dataviz'
 
 Return an interactive dataviz' of the internal dependancies within `codexplor` :
 
-<img src="man/figures/network_codexplor_fn.png" width="90%"  height="80%" alt = ""/>
+<!-- <img src="man/figures/network_codexplor_fn.png" width="90%"  height="80%" alt = ""/> -->
 
 > These dataviz are useful for pinpointing where to start a polishing loop, identifying all the functions impacted by upcoming changes, [...] or assessing the impact of a new dev loop on the project's complexity.
 
@@ -161,7 +169,7 @@ Other languages are planned.
 
 fn_segmentation <- data.frame(
 "High-level" = c(
-"Construct a network of internal dependancies : [vignette of `get_text_network_from_project`](https://clement-lvd.github.io/codexplor/articles/vignette_get_text_network_from_project.html)"
+"Construct a network of internal dependancies : [vignette of `get_text_network_from_project`](https://clement-lvd.github.io/codexplor/articles/vignette_get_citations_network_from_project.html)"
 
 , " "
                 )
