--- a/README.Rmd
+++ b/README.Rmd
@@ -45,43 +45,33 @@ devtools::install_github("clement-LVD/codexplor")
 ---
 
 ### Example : dataviz' of internal dependancies
+Return an interactive dataviz' of the internal dependancies within `codexplor` :
 
-```{r compute-picture-network-of-func, eval=FALSE, include=FALSE}
+```{r compute-corpus-of-func, echo=TRUE}
+library(codexplor)
 
-codes_codexplor <- codexplor::get_doc_network_from_project(repos = "clement-LVD/codexplor")
+ # 1) Construct a corpus and a Citations network
+  net <- get_doc_network_from_project("R/", languages = "R")
 
+  # since this readme is executed from a repo we ask for a "local" folder path ("R/")
+  # At home you'll have the same results with : 
+  # net <-  get_doc_network_from_project(repos = "clement-LVD/codexplor", languages = "R")
 
-netd3 <- get_networkd3_from_igraph(codes_codexplor$citations_network
-                                   , linkDistance = 40
-                                   , charge = -100
-                                   , legend = F 
-                                   , title_h1 = "codexplor functions network")
-
-netd3
+   # return a corpus.list object with 2 corpus.line, 1 corpus.nodelist & 1 citations.network
+  str(net, max.level = 1) 
 
 ```
 
+```{r compute-network-of-func,  results='asis', echo=TRUE}
+# Produce an interactive dataviz'
+dataviz <- get_networkd3_from_igraph(net$citations_network) 
+# library(htmltools)
+# browsable(dataviz)
+  
+```
 
-     net <- codexplor::get_doc_network_from_project(repos = "clement-LVD/codexplor")
-         # Turn a github repo into a corpus & a network of internal dependancies
-         
-         str(net, max.level = 1)  #
-     # List of 4
-       # $ codes            :'data.frame':	808 obs. of  9 variables:
-       # $ comments         :'data.frame':	700 obs. of  8 variables:
-       # $ nodelist         :'data.frame':	18 obs. of  8 variables:
-       # $ citations_network:'data.frame':	13 obs. of  5 variables:
-       # - attr(*, "class")= chr [1:2] "corpus_list" "list"
-       # - attr(*, "date_creation")= Date[1:1], format: "2025-02-28"
-       # - attr(*, "citations_network")= logi TRUE
-       # - attr(*, "languages_patterns")='data.frame':	1 obs. of  6 variables
-     
-     
-     get_networkd3_from_igraph(net$citations_network) # Produce an interactive dataviz'
 
-Return an interactive dataviz' of the internal dependancies within `codexplor` :
-
-<img src="man/figures/network_codexplor_fn.png" width="90%"  height="80%" alt = ""/> 
+<!-- <img src="man/figures/network_codexplor_fn.png" width="90%"  height="80%" alt = ""/>  -->
 
 > These dataviz are useful for pinpointing where to start a polishing loop, identifying all the functions impacted by upcoming changes, [...] or assessing the impact of a new dev loop on the project's complexity.
 
@@ -99,7 +89,7 @@ features <- data.frame(Feature = c(
 
 , "![.](https://img.shields.io/badge/{🚧}-bold?style=flat&logoColor=black&logoSize=2&label=Document-level metrics&labelColor=grey&color=orange)"
 
-, "![.](https://img.shields.io/badge/{🚧}-bold?style=flat&logoColor=black&logoSize=2&label=Line-level metrics&labelColor=grey&color=yellow)"
+, "![.](https://img.shields.io/badge/{🚧}-bold?style=flat&logoColor=black&logoSize=2&label=Line-level metrics&labelColor=grey&color=green)"
  
 # "➕ Document-level metrics"
 ) #2 : documement-level text-mining
@@ -179,7 +169,7 @@ Other languages are planned.
 
 fn_segmentation <- data.frame(
 "High-level" = c(
-"Construct a network of internal dependancies : [vignette of `get_text_network_from_project`](https://clement-lvd.github.io/codexplor/articles/vignette_get_citations_network_from_project.html)"
+"Construct a network of internal dependancies : [vignette of `get_text_network_from_project`](https://clement-lvd.github.io/codexplor/articles/vignette_get_doc_network_from_project.html)"
 
 , " "
                 )
