--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,7 @@
 ---
-output: github_document
+output: 
+  github_document:
+    df_print: paged
 ---
 
 ```{r, include = FALSE}
@@ -64,12 +66,14 @@ library(codexplor)
 
 ```{r compute-network-of-func,  results='asis', echo=TRUE}
 # Produce an interactive dataviz'
-dataviz <- get_networkd3_from_igraph(net$citations_network) 
-# library(htmltools)
-# browsable(dataviz)
-  
+dataviz <- get_networkd3_from_igraph(title_h1 = "codexplor graph of internal dependancies", graph_igraph = net$citations_network) 
 ```
 
+```{r echo=FALSE, results='asis'}
+ 
+networkD3::saveNetwork( dataviz, "force_network.html")   
+cat('<iframe src="force_network.html" width="100%" height="600px" frameborder="0"></iframe>')
+```
 
 <!-- <img src="man/figures/network_codexplor_fn.png" width="90%"  height="80%" alt = ""/>  -->
 
