--- a/README.Rmd
+++ b/README.Rmd
@@ -70,14 +70,14 @@ dataviz <- get_networkd3_from_igraph(title_h1 = "codexplor",subtitle_h2 = "graph
                                      , graph_igraph = net$citations_network) 
 ```
 
-```{r save-plot, results='asis', echo=FALSE}
+```{r save-plot, include=FALSE, results='asis'}
  
 networkD3::saveNetwork( dataviz, "man/figures/network_codexplor_fn.html")   
 webshot2::webshot("man/figures/network_codexplor_fn.html", file = "man/figures/force_network.png")
 
 ```
 
-<!-- `r knitr::include_graphics("man/figures/network_codexplor_fn.png")` -->
+`r knitr::include_graphics("man/figures/force_network.png")`
 
 > These dataviz are useful for pinpointing where to start a polishing loop, identifying all the functions impacted by upcoming changes, [...] or assessing the impact of a new dev loop on the project's complexity.
 
