--- a/vignettes/vignette_construct_corpus.Rmd
+++ b/vignettes/vignette_construct_corpus.Rmd
@@ -16,34 +16,36 @@ knitr::opts_chunk$set(
 ```
 
 # Constructing your corpus
-`codexplor` offer a standardized protocol to turn a programming project into a text-mining corpus, by providing to `construct_corpus` language(s) to analyze, folder(s) path(s) and/or github repo(s).
+`codexplor::construct_corpus` offer a standardized protocol to turn a programming project into a text-mining corpus, given :
 
-```{r example, eval = T}
+- folder(s) path(s) and/or github repo(s) to analyze ;
+- and programming language(s) - default is `'R'`.
+
+
+```{r example, result = 'asis',eval = T}
 library(codexplor)
 
- # 1) Construct a corpus and a Citations network
-  net <- get_doc_network_from_project(repos = "clement-LVD/codexplor", languages = "R")
-   # return a corpus.list object with 2 corpus.line, 1 corpus.nodelist & 1 citations.network
-
-  # since this readme is executed from a repo we ask for a "local" folder path ("R/")
-  # At home you'll have the same results with the codexplor github repo : 
-  # net <-  get_doc_network_from_project(repos = "clement-LVD/codexplor", languages = "R")
-
-  str(net, max.level = 1) 
+# 1) Construct a corpus without a Citations network
+  corp <- construct_corpus("R/", languages = "R")
+  
+  str(corp, max.level = 1) 
   
 ```
 
-
-    corpus <- construct_corpus("~", "tidyverse/stringr", languages = "R")
-
-    # Return a standard `list` of `df` (a `corpus.list` object)
+     # More examples :
+    corpus <- construct_corpus( languages = "R"
+    , repos =  "clement-LVD/codexplor","tidyverse/stringr"))
     
-    corpus_py <- construct_corpus(repos = "secdev/scapy", languages = "Python", .verbose = T) #take a while
+    corpus_py <- construct_corpus(repos = "secdev/scapy"
+    , languages = "Python", .verbose = T) #take a while
 
-This function will compute some text-mining metrics within each line and within document-level (e.g., number of characters, words count).
+### Returned list of data.frame
+`construct_corpus` return a `corpus.list` object, a standard `list` of `df` with 2 `corpus.lines` and 1 `corpus.nodelist` `dataframe`. Later you add others `dataframe` such as a `citations.network` of internal dependancies.
 
-### About default patterns associated with each language
-Standardized patterns are used to construct a corpus. Each of the `languages` supported by `construct_corpus` involve some patterns for :
+Some text-mining metrics are already computed within each line and within document-level (e.g., number of characters, words count). Depending on the considered `dataframe` 
+
+### Default patterns associated with languages
+For a given language, a default standardized patterns is used for :
 
 ```{r table-operations-construct-corpus, echo=FALSE}
 
@@ -52,9 +54,9 @@ steps <- data.frame(Step = c("Read the files of the local folder(s) and/or githu
  , "Extract a 1st matched-text within the codes lines, accordingly to a pattern"
 
 )
- , Examples = c('e.g., "R" language is associated with "`.R`" files and with a filtering pattern (e.g., files with "`test-`", "`vignettes`", "`Rcheck`" in their full names are excluded)'   
+ , Examples = c('e.g., "R" language is associated with "`.R`" files and a filtering pattern (e.g., files with "`test-`", "`vignettes`", "`Rcheck`" in their full names are excluded)'   
 , 'e.g., R & Python files generally have each commented lines that begin with "`#`", others languages should have commented blocks separeted on several lines (e.g., `/* [comments] */`'
-  , 'e.g.,  default pattern is catching the names of the functions defined within a file, e.g., for the R programming language : the name is before a "`<- function(`" instruction'
+  , 'e.g.,  default pattern extract the names of the functions defined within a file, e.g., for the R programming language : the name is before a "`<- function(`" instruction'
 )
 
 )
@@ -65,12 +67,12 @@ knitr::kable(steps,row.names = T )
 
 ```
 
-By default `construct_corpus` try to analyze .R files. One or several `languages` could be passed to `construct_corpus`. Planned languages are : `r paste0(names(get_def_regex_by_language()), collapse = ", ")`
+By default `construct_corpus` try to analyze .R files. One or several `languages` could be passed to `construct_corpus` (e.g., "R", "Python", "Javascript").
 
 ### Function call that are non-supported
 Some way of writing a program are not fully supported, such as :
 
-**Python instantiated methods.** The instantiated Python methods (i.e. `obj.method()`) are not supported for now.
+**Python instantiated methods.** The instantiated Python methods are not supported for now, i.e. `obj.method()`.
 
 ```{r eval = F }
 #  Python code herafter : unmatched function called
